refactor(product): split DTO into Create/Update/Response and inject mapper as component